feat: create task screen

--- a/views/pages/createTask.ejs
+++ b/views/pages/createTask.ejs
@@ -109,11 +109,11 @@
 <body>
     <div class="sidebar">
         <nav class="nav flex-column">
-            <a class="nav-link" href="/page1">
+            <a class="nav-link" href="/index">
                 <img src="/assets/TaskICON.png" alt="Minhas Tarefas">
                 Minhas Tarefas
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/reminders">
                 <img src="/assets/NotificationICON.png" alt="Meus Lembretes">
                 Meus Lembretes
             </a>
