--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
                 <img src="/assets/TaskICON.png" alt="Minhas Tarefas">
                 Minhas Tarefas
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/reminders">
                 <img src="/assets/NotificationICON.png" alt="Meus Lembretes">
                 Meus Lembretes
             </a>
