--- a/views/pages/reminders.ejs
+++ b/views/pages/reminders.ejs
@@ -65,7 +65,7 @@
             <h1 style="font-size:3rem; margin-bottom: 40px;">Meus Lembretes</h1>
             <div class="reminder-card">
                 <div class="reminder-header">
-                    <span>25/05/2025</span>
+                    <span>29/05/2025</span>
                     <span>Lembrete 1</span>
                     <span>ExtraCurricular</span>
                 </div>
@@ -80,7 +80,7 @@
                     <span>Academico</span>
                 </div>
                 <div class="reminder-body">
-                    Você está a um passo de concluir mais uma tarefa. Bora manter o foco?
+                    Sua ponderada de programação está quase pronta! Não esqueça de revisar os detalhes.
                 </div>
             </div>
             <div class="reminder-card">
@@ -90,7 +90,7 @@
                     <span>Pessoal</span>
                 </div>
                 <div class="reminder-body">
-                    Você está a um passo de concluir mais uma tarefa. Bora manter o foco?
+                    lembre-se de limpar a sua casa.
                 </div>
             </div>
         </div>
